syntax = "proto3";
import "Vector3.proto";

package Protocol;
message PositionUpdate {
  int32 targetType = 1;
  int32 targetId = 2;
  Vector3 position = 3;
  Vector3 moveDirection = 4;
}